--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,26 @@
-<div class="page-wrapper">
+<div title="{{divTitle}}" class="page-wrapper">
 
 		<!-- MENU SIDEBAR-->
 		<aside class="menu-sidebar d-none d-lg-block">
 			<div class="logo">
 				<a href="#">
-					<img src="assets/images/ShopIcon" alt="E-commerce Logo" class="img-responsive">
+					<img i18n-alt="This is the alt text for the logo" src="assets/images/ShopIcon" alt="E-commerce Logo" class="img-responsive">
 				</a>
 			</div>
 			<div class="menu-sidebar-content js-scrollbar1">
 				<nav class="navbar-sidebar">
 					<ul class="list-unstyled navbar-list">
 						<li>
-							<a routerLink="/category/1" routerLinkActive="active-link">Books</a>
+							<a i18n routerLink="/category/1" routerLinkActive="active-link">Books</a>
 						</li>
 						<li>
-							<a routerLink="/category/2" routerLinkActive="active-link">Coffee Mugs</a>
+							<a i18n routerLink="/category/2" routerLinkActive="active-link">Coffee Mugs</a>
 						</li>
 						<li>
-							<a routerLink="/category/3" routerLinkActive="active-link">Mouse Pads</a>
+							<a i18n routerLink="/category/3" routerLinkActive="active-link">Mouse Pads</a>
 						</li>
 						<li>
-							<a routerLink="/category/4" routerLinkActive="active-link">Luggage Tags</a>
+							<a i18n routerLink="/category/4" routerLinkActive="active-link">Luggage Tags</a>
 						</li>
 					</ul>
 				</nav>
@@ -36,9 +36,9 @@
 					<div class="container-fluid">
 						<div class="header-wrap">
 							<form class="form-header" onsubmit="return false;" method="GET">
-								<input class="au-input au-input-xl" type="text" name="search"
+								<input i18n-placeholder class="au-input au-input-xl" type="text" name="search"
 									placeholder="Search for data ..." />
-								<button class="au-btn-submit" type="submit">
+								<button i18n class="au-btn-submit" type="submit">
 									Search
 								</button>
 							</form>
@@ -68,8 +68,8 @@
 
 <footer>
 	<ul>
-		<li><a href="#">About Us</a></li>
-		<li><a href="#">Contact Us</a></li>
-		<li><a href="#">Help</a></li>
+		<li><a i18n href="#">About Us</a></li>
+		<li><a i18n href="#">Contact Us</a></li>
+		<li><a i18n href="#">Help</a></li>
 	</ul>
 </footer>
